* Fixed a bug where a player who died in PVP zone (with skill loss set to false) would be affected by the death penalty. * Fixed a bug with relational map storage being loaded or saved in wrong order.
git-svn-id: svn://svn.otland.net/private/forgottenserver/trunk@5952 c161f52b-5830-4e7a-bee0-5dea2c17262e

--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -18,104 +18,9 @@
 	A = Added.
 
 	M The Forgotten Server.exe
-	  data/
-	M   global.lua
-	M 	actions/actions.xml
-	M   creaturescripts/scripts/firstitems.lua
-	    items/
-	M     items.otb
-	M     items.xml
-	M   movements/scripts/snow.lua
-	M   npc/lib/npcsystem/modules.lua
-	    XML/
-	M     mounts.xml
-	M     outfits.xml
 ]
 
 [ Milestone
-	Game protocol 9.80-9.86 support with new items.otb.
-	Offline training!
-	New VIP list code with VIP entries stored on the server side.
-	Added three new mounts and the Demon outfit.
-	Added support for PVP blessing (Twist of Fate). It uses the same function as for regular blessings, but is blessing number 6.
-	Stamina system (set staminaSystem to no in config.lua to disable).
-	Unfair Fight Reduction for deaths in PVP.
-	Lua function getPlayerMoney is now hardcoded in the engine, which should make it significantly faster.
-	Lua function getThingfromPos no longer prints an error if the tile doesn't exist.
-	New Lua functions: isItem(uid), isMonster(cid), isNpc(cid), getPlayerLastLoginSaved(cid), sendGuildChannelMessage(guildId, type, message).
-	Depot code has been rewritten, and the inbox is now global. MySQL databases will be automatically updated, while SQLite requires a reset of the database.
-	Modal window class has been added, although it lacks any connection to the Lua interface to allow customizability. The offline training modal is added using it though (hardcoded).
-	Added walkstack attribute to items.xml.
-	Added exhaustion to mounting.
-	Updated a lot of items in items.xml.
-	Added ignoreendvalue attribute to quests.xml for quests that should stay in the quest log even if the player has a storage value above the endvalue, but instead it will just be marked as (Completed).
-	Added playernameparam attribute to spells.xml for improved behavior for spells with player name parameter (exiva, exura sio).
-	Ignore Equipped option should now work in NPC Trade.
-	Players will no longer be muted for using NPC channel.
-	Players will now be exhausted when trying to use an item even if the item use failed.
-	Players with access level can now mount in protection zone.
-	Removed the hardcoded highscores code.
-	Only NPC's that have walkTicks above 0 can be pushed now.
-	"Temporary" fix for a serious bug with trade. Trade will now be aborted instead of one of the player receiving both items.
-	Money related functions now operate with 64-bit integers as bank balance in the protocol was changed from 32-bit to 64-bit.
-	Level, experience and skill percent change are now sent to the client on death.
-	Health points change packets will now only be sent if needed, and the creatures health points actually has changed.
-	Optimized Creature::getPosition (significant for getSpectators which is one of the most called functions).
-	Optimized getSpectators to utilize spectator cahce under more conditions.
-	Optimized getSpectators more (a bit more memory usage to store a player vector in all map nodes, but much faster getSpectatorsInternal calls when we only need players).
-	Optimized OutputMessagePool::sendAll to scale with a lot of dispatched events (this makes a huge difference for any server with over 500 active players online).
-	Optimized monsters friendList.
-	Container items are now stored in a deque instead of a linked list. This improves performance of accessing an item on a specific index in the container, and iterating, at the cost of increased memory usage for containers (up to 5 times as much memory usage in some STL implementations).
-	Owner on ConditionDamage will no longer be serialized/deserialized as there is no reason to keep it after a relog.
-	Updated Map::checkSightLine.
-	Patched a monster bug fix from trunk.
-	Reduced the Hicks! chance for drunk players.
-	Waypoints support, with two new lua functions getWaypointPosition(name) and doWaypointAddTemporial(name, pos)
-	onDeath for a summon will now only be called if the summons master still exists (in which case we can still tell if it's a summon in the onDeath script).
-	Reworked the code for using items on creatures to address a few bugs with it.
-	Reworked how experience is gained so that players who share experience in party won't take advantage of other players experience multipliers.
-	Neworked how network packets are grouped and splitted before being sent to the client.
-	savePlayersRecord will now close the file even if it fails to write to it.
-	Storage key 30001 is no longer used by the firstitems script.
-	Snow footprint tiles now use the decay code in the engine instead of scheduled events.
-	The message type of “New mail has arrived.” has been corrected and it will now also appear when buying something in the market.
-	sendCancelWalk is now dispatched as default packet handler for Account Manager, instead of being directly called from network thread.
-	Walking through a teleport now shows the teleport effect on the position the creature was teleported from too.
-	Our implementation of Lua bit operations is no longer compiled with LuaJIT as LuaJIT has its own implementation of the Lua bit library.
-	\n can now be used for new line in the questlog.
-	"Your questlog has been updated." can now only be sent once per frame.
-	Corrected trade messages.
-	Corrected damage absorption.
-	Corrected the skull in war mode. It's now green instead of yellow.
-	Updated items.
-	It is no longer possible to move items to containers inside the inbox.
-	Fixed a bug with using a single target rune on a stack with crosshairs. It will now only damage the creature on the top of the stack (first to enter the tile).
-	Fixed the “You advanced to skill level x.” message not appearing when advancing while offline training.
-	Fixed protection zone lock for Hardcore PVP/PVP-Enforced.
-	Fixed a few protocol issues (sendBasicData is no longer the first packet to be sent; and it's not being sent twice now either, ).
-	Fixed a bug where the path in pathfinding would be updated too often.
-	Fixed a bug with UTF-8 characters on signs.
-	Fixed a bug with the last visit time would always show up as the time you just logged in.
-	Fixed a bug where packets that failed to be XTEA-decrypted were parsed anyway.
-	Fixed client debug for players on different floors when a gamemaster used invisible command.
-	Fixed a rare shutdown crash.
-	Fixed the bug with /addskill <playername>, magic level where it would not accurately add exactly one magic level.
-	Fixed the overflow checks for level, skills and magic level formulas (0 > 0 is not true!).
-	Fixed a bug where a player with black skull could get red skull by killing players in pairs.
-	Fixed a bug with doPlayerAddItem.
-	Fixed a bug with yellow skull.
-	Fixed a potential infinite loop in Monster::pushCreatures.
-	Fixed container bugs.
-	Fixed a bug where players could toggle their mount to remove an outfit condition. Players will now be dismounted when affected by an outfit condition, and will not be able to toggle their mount during this time.
-	Fixed so that the visual skill value no longer overflows, if your skill is boosted above 255 (i.e. shielding increased by 220% with protector) it will show as 255.
-	Fixed a bug with the Lua interface in scripted raids.
-	Fixed a Lua stack bug.
-	Fixed a possible client debug if player had too many items in market history.
-	Fixed a bug where players who were idle for 15 minutes would be kicked even though they were in a battle.
-	Fixed potential crashes when performing server actions from the GUI. They are now safely called through the dispatcher instead.
-	Fixed a bug with using runes on players with safe mode on. It will now properly check if the target is unmarked.
-	Fixed a bug where a players level would reset to 1 if they were in the death delay (0 hp) while the server was saving their character.
-	Fixed a bug with NPC Trade where players wouldn’t be able to sell some items to an NPC that sells over 255 items.
-	Fixed a bug with global events configured with interval.
-	A lot of code cleanups and major optimizations (especially to pathfinding, known creatures and VIP lists).
+	Fixed a bug where a player who died in PVP zone (with skill loss set to false) would be affected by the death penalty.
+	Fixed a bug with relational map storage being loaded or saved in wrong order.
 ]
